--- a/aip.tex
+++ b/aip.tex
@@ -535,7 +535,7 @@ Towards this, let $(\collapse{A},\collapse{\vv{u}})$ be the collapse of $(A,\vv{
 If $\vv{s} \in \mc_{\QQ}(A, \vv{u})$ and $q \in \ZZ$ is positive, then  \[ \vv{s}q - \tail{\vv{s}}_q \in \feas \IP(A, \vv{u}, q).\] 
 \end{theorem}
 
-\begin{proof}  \Cref{tail-basics: R} tells us that if $\vv{t} := \vv{s} - q^{-1} \cdot {\tail{\vv{s}}_q}$, then $\vv{t}q = \vv{s}q -\tail{\vv{s}}_q$ has nonnegative integer coordinates.  In fact, \Cref{tail-basics: R} also tells us that we may take $\vv{t}$ in \Cref{less  than u: L} to deduce that $A (\vv{s} q - \tail{\vv{s}}_q ) =  A\vv{t}q <  \vv{u}q$.  
+\begin{proof}  \Cref{tail-basics: R} tells us that if $\vv{t} = \vv{s} - q^{-1} \cdot {\tail{\vv{s}}_q}$, then $\vv{t}q = \vv{s}q -\tail{\vv{s}}_q$ has nonnegative integer coordinates.  In fact, \Cref{tail-basics: R} also allows us to take $\vv{t}$ in \Cref{less  than u: L} to see that $A (\vv{s} q - \tail{\vv{s}}_q ) =  A\vv{t}q <  \vv{u}q$.  
 \end{proof}
 
 
