--- a/aip.tex
+++ b/aip.tex
@@ -1467,7 +1467,7 @@ We define the \emph{fractal linear program} $\Sigma_p(A, \vv{u})$ in $\RR^n$ to 
 \end{definition}
 
 Notice that $\feas \Sigma_p(A, \vv{u}) = \feas \IP(A, \vv{u}) \cap \sierp_p$.
-By refining the integer program $\IP(A, \vv{u})$ in this way, 
+By refining the integer program $\IP(A, \vv{u})$ in this way, we can provide a 
 
 
 
