--- a/preamble.tex
+++ b/preamble.tex
@@ -93,7 +93,7 @@
 \newcommand{\vv}[1]{\mathbf{#1}} %vectors
 \newcommand{\iprod}[2]{\langle #1, #2 \rangle} %dot product
 \newcommand{\norm}[1]{ \| #1 \| } % norm
-
+\newcommand{\canvec}{\vv{e}}
 %representation of rational numbers
 \newcommand{\tail}[1]{\left[ #1 \right]} 
 \newcommand{\lpr}[2]{ [ \hspace{.01in} #1 \, \% \, #2 \hspace{.01in} ]} %least positive residue
@@ -148,7 +148,7 @@
 \newcommand{\cf}{\emph{cf}.}
 \newcommand{\eg}{e.g., }
 \newcommand{\ie}{i.e., }
-
+\newcommand{\loccit}{\emph{loc.~cit.}}
 %notes
 \usepackage[textwidth=3.3 cm,textsize=small,shadow
 %disable
@@ -160,7 +160,7 @@
 
 \newcommand{\emily}[2][]{\todo[linecolor=gray,backgroundcolor=green!30!,caption={}, #1]{#2}}
 \newcommand{\daniel}[2][]{\todo[linecolor=green,backgroundcolor=blue!30!,caption={}, #1]{#2}}  
-\newcommand{\pedro}[2][]{\todo[linecolor=niceblue,backgroundcolor=niceblue!40,caption={}, #1]{#2}} 
+\newcommand{\pedro}[2][]{\todo[linecolor=nicegreen,backgroundcolor=nicegreen!70!,caption={}, #1]{#2}} 
 
 %editing
 \renewcommand{\!}[1]{{\color{red}\text{$\star$\,}#1\,$\star$}}
