--- a/aip.tex
+++ b/aip.tex
@@ -835,6 +835,8 @@ Suppose that $(A, \vv{u})$ is a monomial pair and that $q$ is positive integer. 
 
 
 
+\daniel[inline]{This needs updating.  Will give it a shot soon}
+
 \begin{corollary}  
 \label{uniform value and image: C}
 Given a monomial matrix $A$, there exists an integer $\beta$ satisfying the following condition\textup:  If $(A, \vv{u})$ is a pair with $\O = \mf(A, \vv{u})$, $\vv{s} \in \mc_{\QQ}(A, \vv{u})$ is a point with denominator $D$, and $q>\beta D$, then 
