--- a/aip.tex
+++ b/aip.tex
@@ -590,7 +590,7 @@ Towards this, let $(\collapse{A},\collapse{\vv{u}})$ be the collapse of $(A,\vv{
 If $\vv{s} \in \mc_{\QQ}(A, \vv{u})$ and $q \in \ZZ$ is positive, then  \[ \vv{s}q - \tail{\vv{s}}_q \in \feas \IP(A, \vv{u}, q).\] 
 \end{theorem}
 
-\begin{proof}  \Cref{tail-basics: R} tells us that if $\vv{t} = \vv{s} - q^{-1} \cdot {\tail{\vv{s}}_q}$, then $\vv{t}q = \vv{s}q -\tail{\vv{s}}_q$ has nonnegative integer coordinates.  In fact, \Cref{tail-basics: R} also allows us to take $\vv{t}$ in \Cref{less  than u: L} to see that $A (\vv{s} q - \tail{\vv{s}}_q ) =  A\vv{t}q <  \vv{u}q$.  
+\begin{proof}  \Cref{tail-basics: R} tells us that if $\vv{t} = \vv{s} - (1/q) \cdot {\tail{\vv{s}}_q}$, then $\vv{t}q = \vv{s}q -\tail{\vv{s}}_q$ has nonnegative integer coordinates.  In fact, \Cref{tail-basics: R} also allows us to take $\vv{t}$ in \Cref{less  than u: L} to see that $A (\vv{s} q - \tail{\vv{s}}_q ) =  A\vv{t}q <  \vv{u}q$.  
 \end{proof}
 
 
@@ -874,14 +874,16 @@ do not depend on  $\vv{s} \in \mc_{\QQ}(A, \vv{u})$.
 \end{corollary}
 
 \begin{proof}
-Fix $\vv{s}$ and $\vv{s}'$ in $\mc_{\QQ}(A, \vv{u})$, as well as a common denominator $D$ for these points.  As these quantities clearly depend only on $q \bmod D$, it suffices to show that $\delta(A, \vv{u}, \vv{s}, q) = \delta(A, \vv{u}, \vv{s}', q)$  and $ \Delta(A, \vv{u}, \vv{s}, q) = \Delta(A, \vv{u}, \vv{s}', q)$ whenever $q \gg 0$.  However, this is follows from \Cref{uniform value and image: C}.
+Fix $\vv{s}$ and $\vv{s}'$ in $\mc_{\QQ}(A, \vv{u})$, as well as a common denominator $\denom$ for these points.  As these quantities clearly depend only on $q \bmod \denom$, it suffices to show that $\delta(A, \vv{u}, \vv{s}, q) = \delta(A, \vv{u}, \vv{s}', q)$  and $ \Delta(A, \vv{u}, \vv{s}, q) = \Delta(A, \vv{u}, \vv{s}', q)$ whenever $q \gg 0$.  However, this is follows from \Cref{uniform value and image: C}.
 \end{proof}
 
 \begin{definition}  
 \label{independence: D}  
-If $\vv{s} \in \mc_{\QQ}(A, \vv{u})$ and $q>0$ is an integer, we set \[ \delta(A, \vv{u}, q) = \norm{\tail{\vv{s}}_q}  - \val \ip(A, \vv{u}, \vv{s}, q)\] and 
+
+Given a pair $(A, \vv{u})$ and positive integer $q$, we set 
+ \[ \delta(A, \vv{u}, q) = \norm{\tail{\vv{s}}_q}  - \val \ip(A, \vv{u}, \vv{s}, q)\] and 
 \[\Delta(A, \vv{u}, q) = \collapse{A} \tail{\vv{s}}_q - \im  \ip( A, \vv{u}, \vv{s}, q)  \]
-where $\collapse{A}$ is the collapse of $A$ along $\O = \mf(A, \vv{u})$. 
+where  $\vv{s} \in \mc_{\QQ}(A, \vv{u})$, and $\collapse{A}$ is the collapse of $A$ along $\O = \mf(A, \vv{u})$. 
 \end{definition}
 
 %\begin{remark} Above, we referred to \Cref{uniform value and image: C} to deduce the independence of $\delta(A, \vv{u}, q)$ and $\Delta(A, \vv{u}, q)$ on the rational point $\vv{s} \in \mc_{\QQ}(A, \vv{u})$.  Though it seems likely that this can be established with a more direct argument, we have yet to identify one. 
