--- a/preamble.tex
+++ b/preamble.tex
@@ -118,7 +118,7 @@
 \newcommand{\crit}{\operatorname{crit}}
 \newcommand{\orep}{\mathbb{O}}
 \newcommand{\witt}{\mathfrak{W}}
-\newcommand{\graph}{\mathcal{S}}
+\newcommand{\graph}{\mathfrak{S}}
 \newcommand{\sierp}{\mathscr{S}}
 \newcommand{\fip}{\Sigma}
 \DeclareMathOperator{\sprouts}{sp}
@@ -149,6 +149,7 @@
 \newcommand{\eg}{e.g., }
 \newcommand{\ie}{i.e., }
 \newcommand{\loccit}{\emph{loc.~cit.}}
+
 %notes
 \usepackage[textwidth=3.3 cm,textsize=small,shadow
 %disable
